# AI_Engineer_template

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md  extensions.md  migration-local-models.md  model-profile.md  security.md
evals/: __init__.py  cases.jsonl  run.py
evals/cases/: chat.jsonl  rag.jsonl  retrieval.jsonl  security.jsonl
scripts/: download_models.py  ingest.py  smoke_local_model.py
src/app/: __init__.py  config.py  main.py
src/app/adapters/: model_runtime.py
src/app/adapters/chunking/: __init__.py  langchain.py
src/app/adapters/embeddings/: __init__.py  factory.py  fake.py  fingerprint.py  huggingface.py
src/app/adapters/llm/: __init__.py  factory.py  fake.py  huggingface.py  openai_compatible.py
src/app/adapters/parsers/: __init__.py  html.py  pdf.py  text.py  utils.py
src/app/adapters/retrieval/: __init__.py  qdrant.py
src/app/adapters/web/: __init__.py  httpx_fetcher.py
src/app/api/: body_limit.py  dependencies.py  errors.py  router.py  schemas.py
src/app/api/routes/: chat.py  documents.py  rag.py  retrieval.py  system.py
src/app/api/schemas/: __init__.py  chat.py  documents.py  rag.py  retrieval.py  system.py
src/app/application/: chat.py  delete_document.py  ingest_document.py  ingest_url.py  rag.py  retrieve.py
src/app/bootstrap/: __init__.py  container.py  lifespan.py
src/app/cli/: __init__.py  download_models.py  ingest.py  model_smoke.py
src/app/domain/: chat.py  document_rules.py  documents.py  errors.py  generation.py  retrieval.py
src/app/observability/: __init__.py  logging.py  metrics.py  middleware.py  services.py
src/app/ports/: chunking.py  documents.py  embeddings.py  llm.py  retrieval.py
src/app/prompts/: __init__.py  chat_system.md  rag_system.md  system.md
tests/: __init__.py  conftest.py  test_api.py  test_application_chat.py  test_application_rag.py  test_body_limit.py  test_cli.py  test_config.py  test_documents.py  test_domain.py  test_evals.py  test_ingest_url.py  test_model_adapters.py  test_openai_compatible.py  test_prompts.py  test_qdrant_adapter.py  test_real_model.py  test_web_fetcher.py
