[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-engineer-template"
version = "0.1.0"
description = "Production-ready foundation for AI engineering projects"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.116.1",
    "openai>=1.97.1",
    "prometheus-client>=0.22.1",
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
